[project]
name = "ai-code-review-agent"
version = "0.1.0"
description = "AI code review agent for github pull requests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.1",
    "httpx>=0.28.1",
    "litellm>=1.81.16",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "redis>=7.3.0",
    "structlog>=25.5.0",
    "uvicorn>=0.41.0",
]
